syntax = "proto3";
option java_package = "com.elex.im.test.net.message.proto";
option java_outer_classname = "Test1Message";

message Test1Bean {
	string token = 1; //用户id
	uint32 rid = 2; //区id
	string userIdStr = 3; //登陆的用户id
	uint32 asid = 4; //验证服id
}
//-----------------------------
message Test1Up{
	enum MessageEnum{
		First = 0; //第一个值必须是0
		CommondId = 1100100; //指令
	};
	Test1Bean testBean = 1; //测试bean
}

message Test1Down{
	enum MessageEnum{
		First = 0; //第一个值必须是0
		CommondId = 1100101; //指令
	};
	Test1Bean testBean = 1; //测试bean
}
//-----------------------------

